=== 0.0.1 / 2009-06-19

* Gamebox lives!
  * got game generation working in ruby 1.8
  * initial objects built
    * Actor/ActorViews (game objects)
    * Director manages actors
    * Level manages directors, backgrounds, level goals
    * Mode manages level loading and order
    * Behavior system for adding behaviors to actors (ie physical to put an actor into a physical space)
    * Loading of Levels from an SVG file
		* Polaris A* path finder
    * Lots more to come!
  * examples to show how to use it
    * netris
    * roids
    * rague
    * nario

=== 0.0.2 / 2009-06-26

* Bug fix release for RubyWeekend #3
  * input_manager had problems with mouse events

=== 0.0.3 / 2009-06-26

* Bug fix release for RubyWeekend #3
  * updatable behavior was not in the manifest

=== 0.0.4 / 2009-06-27

* Bug fix release for RubyWeekend #3
  * added registering for events with input_manager that have no ids (ie i.reg KeyDownEvent do |e| ... will get all keys pressed)

=== 0.0.5 / 2009-06-28

* Bug fix release for RubyWeekend #3
  * sound manager now ignores txt files

=== 0.0.6 / 2009-06-30

* Multiple fixes and features
  * added rake run to all gamebox games
  * added rake debug to all gamebox games
  * added input_manager to levels
  * added usage -help to gamebox
  * added ./script/generate to generate actors (ie ./script/generate actor Foo)
  * migrated all test to use rspec
  * changed clear_hooks to take a listener instance

=== 0.0.7 / 2009-07-04

* New Particle System code in roids
* Changed license to MIT
* Bug fixes
  * added OpenGL option for screen (per jacius request)
* reorganized code
* changed :parts to :shapes in the physical behavior
* merged in jacius' new event system