@@ -2,5 +2,5 @@ require 'actor'
 
 class NarioBackground < Actor
   has_behaviors :graphical,
-    {:layered => {:layer => 0, :parallax => Float::Infinity}}
+    {:layered => {:layer => 0, :parallax => Float::INFINITY}}
 end
