@@ -1,3 +1,3 @@
 class Float
-    Infinity = 1.0/0.0
+    INFINITY = 1.0/0.0
 end
